--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.5.2
+beautifulsoup4==4.11.1
 certifi==2022.6.15
 charset-normalizer==2.0.12
 cloudinary==1.29.0
 dj3-cloudinary-storage==0.0.6
 Django==4.0.5
+django-bootstrap5==21.3
+django-widget-tweaks==1.4.12
 idna==3.3
+Pillow==9.1.1
 requests==2.28.0
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 urllib3==1.26.9
