--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-bootstrap5==21.3
 django-widget-tweaks==1.4.12
 idna==3.3
 Pillow==9.1.1
+psycopg2==2.9.3
 requests==2.28.0
 six==1.16.0
 soupsieve==2.3.2.post1
