--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==20.1.0
 idna==3.3
 Pillow==9.1.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.5
 python-decouple==3.6
 requests==2.28.0
 six==1.16.0
