--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.0.5
 django-bootstrap5==21.3
+django-environ==0.9.0
 django-heroku==0.3.1
 django-widget-tweaks==1.4.12
 gunicorn==20.1.0
